--- a/Relógio-digital/assets/css/style.css
+++ b/Relógio-digital/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     /*border: 1px solid red;*/
     margin: 0;
@@ -26,6 +25,7 @@ body{
     border-radius: 3px;
     box-shadow: 7px 8px 10px rgba(0, 0, 0, .5);
 }
+
 .relogio div{
     height: 170px;
     width: 150px;
@@ -45,9 +45,7 @@ body{
     font-size: 60px;
 }
 
-.relogio span.tempo{
-    font-size: 10px;
-}
+.relogio span.tempo { font-size: 10px; }
 
 .habilitar button{
     display: flex;
@@ -55,6 +53,16 @@ body{
     align-items: center;
     width: 150px;
     height: 40px;
+    background: rgba(0, 0, 0, .5);
+    color: #fff;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, .7);
+}
+.stop button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 30px;
     background: rgba(0, 0, 0, .5);
     color: #fff;
     box-shadow: 5px 5px 8px rgba(0, 0, 0, .7);
@@ -92,6 +100,7 @@ body{
     background: rgba(63, 63, 66 .6);
     border-bottom: 2px solid black;
 }
+
 .horario{
     display: flex;
     justify-content: center;
@@ -118,20 +127,19 @@ body{
     height:80px ;
 }
 
+.som input{ background: transparent; }
+
 .volume{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.som input{
-   background: transparent;
 
-}
+
 .check input{
     text-align: center;
     background: rgba(0, 0, 0, .9);
     border-radius: 5px;
-
 }
 
 .titulo{
@@ -147,8 +155,6 @@ body{
     background: rgba(0, 0, 0, .5);
     color: #fff;
     box-shadow: 5px 5px 8px rgba(0, 0, 0, .7);
-
-
 }
 
 .footer{
@@ -159,6 +165,7 @@ body{
     height: 80px;
     border-top: 3px solid rgb(0, 0, 0);
 }
+
 .footer button{
     display: flex;
     justify-content: center;
@@ -168,10 +175,10 @@ body{
     background: rgba(0, 0, 0, .5);
     color: #fff;
     box-shadow: 5px 5px 8px rgba(0, 0, 0, .7);
-
 }
 
 #overlay {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -179,4 +186,8 @@ body{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 9998;
+}
+
+#editarAlarme {
+    display: none;
 }
